--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ monotonic==1.5
 numpy==1.23.4
 pandas==1.5.1
 requests==2.22.0
+statistics==1.0.3.5
 scikit-learn==1.1.3
 scipy==1.9.3
 SecretStorage==2.3.1
